# StuttgartCenterTask

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  flower-entrypoint.sh  pyproject.toml  task_description.docx
config/: env_config.py  logger.py  settings.py  urls.py
wildberries/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
wildberries/migrations/: 0001_initial.py  0002_alter_product_basic_price_alter_product_sale_price.py  0003_alter_product_review_rating.py
